18.35
...